kubernetes/apps/thelounge/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-only
  namespace: thelounge
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10
      - 127.0.0.1/32
      - 10.42.0.0/16
      - 10.43.0.0/16
