kubernetes/apps/thelounge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  namespace: thelounge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        fsGroup: 1000
      containers:
        - name: thelounge
          image: thelounge/thelounge:4
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /var/opt/thelounge
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: thelounge-data
