kubernetes/apps/thelounge/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thelounge
  namespace: thelounge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`irc.nihalxkumar.dev`)
      kind: Rule
      services:
        - name: thelounge
          port: 9000
  tls:
    secretName: nihalxkumar-dev-tls
